# xdiff

./: API.md  CMakeLists.txt  Makefile  README.md  git-xdiff.h  xdiff-cli.c  xdiff-moved.c  xdiff-moved.h  xdiff.h  xdiffi.c  xdiffi.h  xemit.c  xemit.h  xhistogram.c  xinclude.h  xmacros.h  xmerge.c  xpatience.c  xprepare.c  xtypes.h  xutils.c  xutils.h
tests/: CMakeLists.txt  test_config.h.in  test_xdiff_cli.cpp
